# VoltageControlledFun

./: .clang-format  .gitignore  AudioNoiseGate.cpp  AudioNoiseGate.h  ButtonHandler.h  CMakeLists.txt  PotReader.h  README.md  RandomFunction.cpp  RandomFunction.h  TapDaBeat.cpp  TapDaBeat.h  VoltageControlledFun.cpp  audiochain.gv  doty.py  filter_variable.cpp  filter_variable.h  filter_variable_limited.cpp  filter_variable_limited.h
